unpackaged/main/default/objects/Hearings__c/Hearings__c.object-meta.xml
<CustomObject>
    <label>Hearings and Deadlines</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Hearings and Deadlines</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>