unpackaged/main/default/objects/Hearings__c/fields/Matter__c.field-meta.xml
<CustomField>
    <fullName>Matter__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Matter</label>
    <referenceTo>advpm__Matter__c</referenceTo>
    <relationshipLabel>Hearings and Deadlines</relationshipLabel>
    <relationshipName>Hearings_and_Deadlines</relationshipName>
    <type>Lookup</type>
</CustomField>