unpackaged/main/default/objects/Hearings__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>CMC</fullName>
            </value>
            <value>
                <fullName>OSC</fullName>
            </value>
            <value>
                <fullName>Motion for Summary Judgment</fullName>
            </value>
            <value>
                <fullName>Ex Parte</fullName>
            </value>
            <value>
                <fullName>Writ of Attachment</fullName>
            </value>
            <value>
                <fullName>Motion to Compel</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>